--- a/todoApp/server/package.json
+++ b/todoApp/server/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/uuid": "^9.0.2",
     "apollo-server-express": "^3.12.0",
     "concurrently": "^8.2.0",
@@ -23,6 +24,7 @@
   },
   "dependencies": {
     "apollo-server": "^3.12.0",
+    "bcrypt": "^5.1.0",
     "graphql": "^16.7.1",
     "mongoose": "^7.4.0",
     "uuid": "^9.0.0"
